added carrierwave. Mounted ImageUloader to :file column on Image class and updated form and show Image views

--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -10,6 +10,11 @@
   <%= @image.name %>
 </p>
 
+<p>
+  <b>Image uploaded:</b>
+  <%= image_tag(@image.file.url) %>
+</p>
+
 
 <%= link_to 'Edit', edit_image_path(@image) %> |
 <%= link_to 'Back', images_path %>
