added MosaicMaker module. Updated Mosaic controlle create method. added path to Mosaic. updated Mosaic show page

--- a/app/views/mosaics/show.html.erb
+++ b/app/views/mosaics/show.html.erb
@@ -4,6 +4,10 @@
   <b>Name:</b>
   <%= @mosaic.name %>
 </p>
+
+<div>
+  <%= image_tag(@mosaic.path) %>
+</div>
 <div>
   <% @mosaic.images.each do |image| %>
     <%= image_tag(image.file.url) %>
