--- a/app/assets/stylesheets/images.css.scss
+++ b/app/assets/stylesheets/images.css.scss
@@ -1,3 +1,24 @@
 // Place all the styles related to the Images controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+.input_image, .fb_pic_container {
+  width: 100px;
+  height: 100px;
+  display: inline-block;
+  text-align: center;
+  vertical-align: middle;
+  margin: 10px;
+
+  img {
+    max-width: 100px;
+    max-height: 100px;
+    box-shadow: 0px 0px 10px 5px grey;
+  }
+  .selected {
+    box-shadow: 0px 0px 10px 5px blue;
+  }
+}
+
+
