--- a/app/views/mosaics/_form.html.erb
+++ b/app/views/mosaics/_form.html.erb
@@ -3,7 +3,7 @@
 
   <div class="field">
     <%= f.label :name %><br />
-    <%= f.text_field :name %>
+    <%= f.text_field :name, placeholder: "e.g. My Mosaic", required: true %>
   </div>
 
   <div>
