added imagepicker to montage new form

--- a/app/views/mosaics/_form.html.erb
+++ b/app/views/mosaics/_form.html.erb
@@ -1,3 +1,8 @@
+<h3>Select images for background tiles:</h3>
+<p>Choose individual pictures by clicking the images below, or... </p>
+<button id="add_all">add all</button>
+<button id="remove_all">remove all</button>
+
 <%= form_for(@mosaic) do |f| %>
   <%= render "shared/errors", target: @mosaic %>
 
@@ -7,7 +12,6 @@
   </div>
 
   <div>
-    <p>Select images for background tiles:</p>
     <%= select_tag("mosaic[image_ids][]", options_for_select(current_user.images.all.collect{ |img| [img.name, img.id, {"data-img-src" => img.file.url}] }), multiple: true) %>
   </div>
 
