zoom feature needs big and small versions of the image. Updated MosaicMaker to generate a large and small version. added path_small column to Mosaic table. updated Mosaic create method to pass both path attributes to the mosaic instance.

--- a/app/views/mosaics/show.html.erb
+++ b/app/views/mosaics/show.html.erb
@@ -6,7 +6,7 @@
 </p>
 
 <div id="mosaic_container">
-  <%= image_tag(@mosaic.path) %>
+  <%= image_tag(@mosaic.path_small) %>
 </div>
 <div>
   <% @mosaic.images.each do |image| %>
