added elevatezoom.js jQuery plug in to zoom on mouseover of mosaic. simple zoom implemented on show page for now.

--- a/app/views/mosaics/show.html.erb
+++ b/app/views/mosaics/show.html.erb
@@ -5,8 +5,10 @@
   <%= @mosaic.name %>
 </p>
 
+<!-- <img data-zoom-image="<%#= @mosaic.path %>" id="zoom_01" src="<%#= @mosaic.path_small %>"/> -->
+
 <div id="mosaic_container">
-  <%= image_tag(@mosaic.path_small) %>
+  <%= image_tag(@mosaic.path_small, id: "zoom_01", data: {"zoom-image" => @mosaic.path}) %>
 </div>
 <div>
   <% @mosaic.images.each do |image| %>
