--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,25 +8,10 @@
 </head>
 <body>
   <div id="container">
-    <div class="user-nav">
-      <% if user_signed_in? %>
-        Logged in as
-        <b>
-          <%= current_user.email %>
-        </b>
-        <%= link_to 'Edit Profile', edit_user_registration_path %>
-        |
-        <%= link_to 'Logout',  destroy_user_session_path, method: :delete %>
-      <% else %>
-        <%= link_to 'Sign up', new_user_registration_path %>
-        |
-        <%= link_to 'Login', new_user_session_path %>
-      <% end %>
-    </div>
+    <%= render 'shared/user_nav' %>
+    <%= render 'shared/site_nav' %>
+    <%= render 'shared/flash_messages' %>
 
-    <% flash.each do |name, msg| %>
-      <%= content_tag :div, msg, :id => "flash_#{name}" %>
-    <% end %>
     <%= yield %>
   </div>
 </body>
