--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -1,15 +1,42 @@
 <h1>My images</h1>
+<div id="image_uploads_container" class="cf">
 
-<h3>Uploaded images:</h3>
-<% @images.each do |image| %>
-  <div class="input_image">
-    <%= image_tag(image.file.url) %>
+  <!-- left -->
+  <div id="upload_area">
+    <div id="upload_type_selector" class="cf">
+      <div id="upload_selector_file" class="upload_selector active">
+        <p>upload from file</p>
+      </div>
+      <div id="upload_selector_fb" class="upload_selector get_from_fb inactive">
+        <p>upload from facebook</p>
+      </div>
+    </div>
+    <div id="upload_forms"> 
+      <!-- toggle show on active depending on selection above -->
+      <div id="upload_from_file">
+        <%= render 'form', target_image: Image.new %>
+      </div>
+      <div id="upload_from_fb">
+        <div id="album_selector">
+          <%= render 'facebook_images_uploader' %>
+        </div>
+        <div id="fb_albums">
+        </div>
+      </div>
+    </div>
   </div>
-<% end %>
-
-<h3>Facebook images:</h3>
+  
 
 
-<div>
-  <%= link_to 'New Image', new_image_path %>
+  <!-- right -->
+  <div id="uploaded_images_outer">
+    <h3>Uploaded images:</h3>
+    <div id="uploaded_images_inner">
+      <% @images.each do |image| %>
+        <div class="uploaded_image_container">
+          <%= image_tag(image.file.url) %>
+        </div>
+      <% end %>
+    </div>
+  </div>
 </div>
