--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,9 @@
     <%= render 'shared/user_nav' %>
     <%= render 'shared/site_nav' %>
     <%= render 'shared/flash_messages' %>
-
     <%= yield %>
   </div>
+
+  <div class="modal"></div>
 </body>
 </html>
