--- a/app/assets/stylesheets/mosaics.css.scss
+++ b/app/assets/stylesheets/mosaics.css.scss
@@ -10,4 +10,41 @@
     max-width: 600px;
     max-height: 600px;
   }
+
+
+}
+
+#new_mosaic {
+  width: 90%;
+  margin: 0 auto;
+
+  #tiles, #target {
+
+    border: 1px solid #dddddd;
+
+    .thumbnails{
+      text-align: center;
+
+      li {
+        margin: 1%;
+        width: 18%;
+        float: left;
+
+        .thumbnail {
+          max-width: 100%;
+          max-height: 100%;
+          text-align: center;
+          vertical-align: middle;
+          // margin: 10px;
+          text-align: center;
+
+          .image_picker_image {
+            display: block;
+            margin: 0 auto;
+            max-height: 86px;
+          }
+        }
+      }
+    }
+  }
 }
