--- a/app/assets/stylesheets/mosaics.css.scss
+++ b/app/assets/stylesheets/mosaics.css.scss
@@ -63,8 +63,44 @@
       display: none;
       height: inherit;
       overflow: auto;
+
+      #name_input {
+        width: 50%;
+        height: 60px;
+        float: left;
+        display: inline-block;
+        text-align: right;
+        padding: 10px;
+        margin: 0;
+        line-height: 60px;
+      }
+
+      #make_mosaic_button {
+        width: 50%;
+        height: 60px;
+        float: left;
+        display: inline-block;
+        text-align: right;
+        padding: 10px;
+        margin: 0;
+
+        #go_to_step_3 {
+          text-align: center;
+          width: 50%;
+          float: left;
+          display: inline-block;
+          line-height: 60px;
+        }
+
+        #submit_button {
+          text-align: center;
+          width: 50%;
+          float: left;
+          display: inline-block;
+          line-height: 60px;
+        }
+      }
       
-      #go_to_step_3 {}
 
       #target {
         border-radius: 10px;
@@ -72,8 +108,6 @@
         overflow: auto;
       }
 
-      #submit_button {
-      }
       
       input[type=submit] {
         // visibility: hidden;
