--- a/app/views/shared/_site_nav.html.erb
+++ b/app/views/shared/_site_nav.html.erb
@@ -5,8 +5,8 @@
     <li><a href="/">gallery</a></li>
     <li><a href="/">products</a></li>
     <li><a href="/">contact us</a></li>
-    <li><a href="/">GET STARTED</a></li>
-    <li><a href="/images">images</a></li>
-    <li><a href="/mosaics">mosaics</a></li>
+    <li><a href="/images">GET STARTED</a></li>
+    <li><a href="/images">my images</a></li>
+    <li><a href="/mosaics">my mosaics</a></li>
   </ul>
 </nav>
