--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,25 +1,136 @@
-<h1>Welcome</h1>
+<div id="content">
 
-<div id="section_1" class="section_container">
-  <h2>section_1</h2>
-</div>
+  <div id="section_1" class="section_container">
+    <h1>Welcome to PixelPic</h1>
+    <div class="section_inner_container">
+      <h2>About</h2>
+      <p>With PixelPic you can create a unique, personal artwork in just a few steps, using your own pictures...</p>
+      <ul>
+        <li>Create the perfect wedding memory</li>
+        <li>Celebrate a special birthday or anniversary</li>
+        <li>Make a unique yearbook</li>
+        <li>Make anything!</li>
+      </ul>
+      <div id="example_image_container">
+        <img src="" alt="example PixelPic">
+      </div>
+    </div>
+  </div>
 
-<div id="section_2" class="section_container">
-  <h2>section_2</h2>
-</div>
+  <div id="section_2" class="section_container">
+    <div class="section_inner_container">
+      <h2>How It Works</h2>
+      <p>Create your PixelPic in just a few simple steps...</p>
+      <div class="how_to">
+        <p>1) upload your images from your pc or from facebook</p>
+        <img src="" alt="">
+      </div>
+      <div class="how_to">
+        <p>2) select the image you want as the main picture</p>
+        <img src="" alt="">
+      </div>
+      <div class="how_to">
+        <p>3) customise your image with a size and name... and that's it!</p>
+        <img src="" alt="">
+      </div>
 
-<div id="section_3" class="section_container">
-  <h2>section_3</h2>
-</div>
+    </div>
+  </div>
 
-<div id="section_4" class="section_container">
-  <h2>section_4</h2>
-</div>
+  <div id="section_3" class="section_container">
+    <div class="section_inner_container">
+      <h2>Gallery</h2>
+      <div>
+        scrollable image gallery
+      </div>
 
-<div id="section_5" class="section_container">
-  <h2>section_5</h2>
-</div>
+    </div>
+  </div>
 
-<div id="section_6" class="section_container">
-  <h2>section_6</h2>
+  <div id="section_4" class="section_container">
+    <div class="section_inner_container">
+      <h2>Products & Pricing</h2>
+      You can buy your PixelPic in several high quality formats. Click on the images below for more detail...
+      <div>
+        <div>Image 1 - Framed PixelPic</div>
+        <div>Image 2 - Canvas Print PixelPic</div>
+        <div>Image 3 - PixelPic Digital Image Only</div>
+        <div>
+          <h3>Detail 1 - Framed PixelPic</h3>
+          <p>You can buy your high quality PixelPic framed print in the following sizes:</p>
+          <table>
+            <tr>
+              <td>Size</td>
+              <td>Prize</td>
+            </tr>
+            <tr>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td></td>
+              <td></td>
+            </tr>
+          </table>
+        </div>
+        <div>
+          <h3>Detail 2 - Canvas Print PixelPic</h3>
+          <p>You can buy your high quality PixelPic canvas print in the following sizes:</p>
+          <table>
+            <tr>
+              <td>Size</td>
+              <td>Prize</td>
+            </tr>
+            <tr>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td></td>
+              <td></td>
+            </tr>
+          </table>
+        </div>
+        <div>
+          <h3>Detail 3 - PixelPic Digital Image Only</h3>
+          <p>You can buy your high quality PixelPic digital image for just £14.99</p>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+  <div id="section_5" class="section_container">
+    <div class="section_inner_container">
+      <h2>Contact Us</h2>
+      <div class="contact">
+        <p>Address</p>
+      </div>
+      <div class="contact">
+        <p>Map</p>
+      </div>
+      <div class="contact">
+        <ul>
+          <li>tel</li>
+          <li>e</li>
+        </ul>
+      </div>
+      <div class="contact">
+        <ul>
+          <li>twitter</li>
+          <li>fb</li>
+          <li>instagram</li>
+        </ul>
+      </div>
+
+    </div>
+  </div>
 </div>
