--- a/app/views/shared/_site_nav.html.erb
+++ b/app/views/shared/_site_nav.html.erb
@@ -1,12 +1,11 @@
 <nav id="nav">
   <ul>
-    <li><a href="/">about</a></li>
-    <li><a href="/">how it works</a></li>
-    <li><a href="/">gallery</a></li>
-    <li><a href="/">products</a></li>
-    <li><a href="/">contact us</a></li>
+    <li><a href="#section_1" class="scroll_link">home</a></li>
+    <li><a href="#section_2" class="scroll_link">how it works</a></li>
+    <li><a href="#section_3" class="scroll_link">gallery</a></li>
+    <li><a href="#section_4" class="scroll_link">products</a></li>
+    <li><a href="#section_5" class="scroll_link">contact us</a></li>
     <li><a href="/images">GET STARTED</a></li>
-    <li><a href="/images">my images</a></li>
     <li><a href="/mosaics">my mosaics</a></li>
   </ul>
 </nav>
