added scrollTo jQuery module and applied to nav links on home page

--- a/app/views/shared/_site_nav.html.erb
+++ b/app/views/shared/_site_nav.html.erb
@@ -1,10 +1,10 @@
 <nav id="nav">
   <ul>
-    <li><a href="#section_1" class="scroll_link">home</a></li>
-    <li><a href="#section_2" class="scroll_link">how it works</a></li>
-    <li><a href="#section_3" class="scroll_link">gallery</a></li>
-    <li><a href="#section_4" class="scroll_link">products</a></li>
-    <li><a href="#section_5" class="scroll_link">contact us</a></li>
+    <li><a href="/" data-scroll-link="#section_1" class="scroll_link">home</a></li>
+    <li><a href="/#section_2"  data-scroll-link="#section_2" class="scroll_link">how it works</a></li>
+    <li><a href="/#section_3"  data-scroll-link="#section_3" class="scroll_link">gallery</a></li>
+    <li><a href="/#section_4"  data-scroll-link="#section_4" class="scroll_link">products</a></li>
+    <li><a href="/#section_5"  data-scroll-link="#section_5" class="scroll_link">contact us</a></li>
     <li><a href="/images">GET STARTED</a></li>
     <li><a href="/mosaics">my mosaics</a></li>
   </ul>
