--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -44,6 +44,7 @@ a {
 
 #nav_menus {
   position: fixed;
+  margin-top: -75px;
   height: 75px;
   width: 100%;
   border-bottom: 1px solid #6CA2A4;
@@ -85,7 +86,9 @@ a {
   }
 }
 
-
+#container {
+  margin-top: 75px;
+}
 
 .details {
   width: 90%;
